@@ -40,3 +40,16 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     freeCompilerArgs += "-Xopt-in=androidx.room.compiler.processing.ExperimentalProcessingApi"
   }
 }
+
+test {
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
+  jvmArgs '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+}
